--- a/extra/kitty/gruvsquirrel.conf
+++ b/extra/kitty/gruvsquirrel.conf
@@ -7,43 +7,41 @@
 
 foreground #c7c7c7
 background #070707
-## background #1d2021
-## foreground #d4be98
 
-selection_background #d4be98
-selection_foreground #1d2021
+selection_background #878787
+selection_foreground #3c3836
 
-/* cursor #a89984 */
-/* cursor_text_color background */
+cursor #c7c7c7
+cursor_text_color background
 
 # Black
-## color0 #665c54
-## color8 #928374
+color0 #070707
+color8 #1a1a1a
 
 # Red
 color1 #ff6961
-color9 #ff6961
+color9 #af3a03
 
 # Green
 color2  #8faa80
-color10 #8faa80
+color10 #53654e
 
 # Yellow
 color3  #dbbc5f
-color11 #dbbc5f
+color11 #d6991d
 
 # Blue
 color4  #83a598
-color12 #83a598
+color12 #458588
 
 # Magenta
 color5  #d3869b
-color13 #d3869b
+color13 #b16286
 
 # Cyan
 color6  #9dbad4
-color14 #9dbad4
+color14 #92bbdf
 
 # White
 color7  #c7c7c7
-color15 #c7c7c7
+color15 #b7a7b7
