--- a/.github/panvimdoc.yml
+++ b/.github/panvimdoc.yml
@@ -1,10 +1,10 @@
 name: panvimdoc
 
-on: 
-  push:
-    paths:
-      README.md
-
+on:
+  - workflow_dispatch
+  - push:
+      paths:
+        README.md
 
 jobs:
   docs:
