--- a/.github/release.yml
+++ b/.github/release.yml
@@ -1,8 +1,10 @@
 name: Release
+
 on:
-  push:
-    branches:
-      - main
+  - workflow_dispatch
+  - push:
+     branches:
+       - main
 jobs:
   release:
     name: release
