--- a/.github/workflows/panvimdoc.yml
+++ b/.github/workflows/panvimdoc.yml
@@ -1,11 +1,8 @@
 name: panvimdoc
-
 on:
-  - workflow_dispatch
-  - push:
-      paths:
-        README.md
-
+  push:
+    paths: README.md
+  workflow_dispatch:
 jobs:
   docs:
     runs-on: ubuntu-latest
@@ -27,5 +24,3 @@ jobs:
           commit_user_name: "github-actions[bot]"
           commit_user_email: "github-actions[bot]@users.noreply.github.com"
           commit_author: "github-actions[bot] <github-actions[bot]@users.noreply.github.com>"
-
-
