chore: lsp and mason

--- a/extra/k9s/gruvsquirrel.yml
+++ b/extra/k9s/gruvsquirrel.yml
@@ -15,7 +15,7 @@ red: &red "#ff6961"
 darkorange: &darkorange "#9d0006"
 mediumvioletred: &mediumvioletred "#ff6961"
 mediumpurple: &mediumpurple "#8f3f71"
-gray: &gray "#928374"
+gray: &gray "#968c81"
 lightslategray: &lightslategray "#504945"
 papayawhip: &papayawhip "#b7a7b7"
 limegreen: &limegreen "#8faa80"
