--- a/extra/vivid/gruvsquirrel.yml
+++ b/extra/vivid/gruvsquirrel.yml
@@ -11,7 +11,7 @@ colors:
   orange:     "d6991d"
 
   alt_light:  "a0a0a0"    
-  alt_dark:   "928374"
+  alt_dark:   "968c81"
   alt_red:    "af3a03"
   alt_green:  "53654e"
   alt_yellow: "dea584"
