chore: general improvements

--- a/extra/kitty/themes/gruvsquirrel.conf
+++ b/extra/kitty/themes/gruvsquirrel.conf
@@ -26,7 +26,8 @@ bell_border_color       #d3869b
 inactive_border_color   #1a1a1a
 
 # Visual Bell
-visual_bell_color       
+visual_bell_color       #32302f
+
 
 # Marks
 mark1_background        #1a1a1a
